cluster/prod/platform/policies/require-resourcelimits.yaml
apiVersion: kyverno.io/v1
kind: ClusterPolicy
metadata:
  name: require-resources
spec:
  validationFailureAction: Audit
  background: true
  rules:
    - name: require-cpu-mem
      match:
        resources:
          kinds: ["Pod"]
          namespaceSelector:
            matchExpressions:
              - key: role
                operator: NotIn
                values: ["infra"]
      validate:
        message: "CPU and memory requests/limits are recommended"
        pattern:
          spec:
            containers:
              - resources:
                  requests:
                    memory: "?*"
                    cpu: "?*"
                  limits:
                    memory: "?*"
                    cpu: "?*"
